fixing the jump force/velocity on game

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ body {
 }
 
 .score{
-    
+    display : none;
     font-size: 24px;
     color: white;
     margin-top: 20px;
